--- a/app/configs/application.ini
+++ b/app/configs/application.ini
@@ -13,9 +13,7 @@ resources.frontController.params.prefixDefaultModule = "1"
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 resources.modules[] = ""
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/core/"
-;resources.frontController.baseUrl = http://localhost
-;resources.frontController.baseUrl = http://192.168.1.86
-resources.frontController.baseUrl = http://helpme_01
+resources.frontController.baseUrl = http://192.168.1.51
 
 ; Session
 resources.session.remember_me_seconds = 86400
