--- a/app/configs/validate.ini
+++ b/app/configs/validate.ini
@@ -1,9 +1,15 @@
 ;Уровни
 level.name.type = "text"
-level.name.options.validators.StringLength.validator = "StringLength"
-level.name.options.validators.StringLength.options.min = 1
-level.name.options.validators.StringLength.options.max = 60
-level.name.options.validators.Alnum.validator = "Alnum"
-level.name.options.validators.Alnum.options.allowWhiteSpace = true
+level.name.options.validators.Regex.validator = "Regex"
+level.name.options.validators.Regex.options.pattern = "/^[\wа-я\-\s]{1,50}$/iu"
+
+;level.name.options.validators.StringLength.validator = "StringLength"
+;level.name.options.validators.StringLength.options.min = 1
+;level.name.options.validators.StringLength.options.max = 60
+;level.name.options.validators.Alnum.validator = "Alnum"
+;level.name.options.validators.Alnum.options.allowWhiteSpace = true
 
 ;Группы
+group.name.type = "text"
+group.name.options.validators.Regex.validator = "Regex"
+group.name.options.validators.Regex.options.pattern = "/^[\wа-я\-\s]{1,50}$/iu"
