--- a/app/configs/validate.ini
+++ b/app/configs/validate.ini
@@ -1,7 +1,19 @@
+;Использовать Zend_Filter_Input (связка filters + vatidators)
+
+;Аккаунт
+account.login.type = "text"
+account.login.options.validators.Regex.validator = "Regex"
+account.login.options.validators.Regex.options.pattern = "/^[0-9a-z_-]{1,50}$/iu"
+account.login.options.filters.StringTrim.filter = "StringTrim"
+account.password.type = "password"
+account.password.options.validators.Regex.validator = "Regex"
+account.password.options.validators.Regex.options.pattern = "/^[0-9a-z_-]{1,50}$/iu"
+
 ;Уровни
 level.name.type = "text"
 level.name.options.validators.Regex.validator = "Regex"
 level.name.options.validators.Regex.options.pattern = "/^[\wа-я\-\s]{1,50}$/iu"
+level.name.options.filters.StringTrim.filter = "StringTrim"
 
 ;level.name.options.validators.StringLength.validator = "StringLength"
 ;level.name.options.validators.StringLength.options.min = 1
