--- a/app/configs/validate.ini
+++ b/app/configs/validate.ini
@@ -25,3 +25,5 @@ level.name.options.filters.StringTrim.filter = "StringTrim"
 group.name.type = "text"
 group.name.options.validators.Regex.validator = "Regex"
 group.name.options.validators.Regex.options.pattern = "/^[\wа-я\-\s]{1,50}$/iu"
+
+;Тарифы
