--- a/app/configs/validate.ini
+++ b/app/configs/validate.ini
@@ -27,3 +27,6 @@ group.name.options.validators.Regex.validator = "Regex"
 group.name.options.validators.Regex.options.pattern = "/^[\wа-я\-\s]{1,50}$/iu"
 
 ;Тарифы
+tariff.name.type = "text"
+tariff.name.options.validators.Regex.validator = "Regex"
+tariff.name.options.validators.Regex.options.pattern = "/^[\wа-я\-\s]{1,50}$/iu"
