--- a/app/configs/validate.ini
+++ b/app/configs/validate.ini
@@ -30,3 +30,49 @@ group.name.options.validators.Regex.options.pattern = "/^[\wа-я\-\s]{1,50}$/iu
 tariff.name.type = "text"
 tariff.name.options.validators.Regex.validator = "Regex"
 tariff.name.options.validators.Regex.options.pattern = "/^[\wа-я\-\s]{1,50}$/iu"
+tariff.consultation_enabled.type = "checkbox"
+tariff.consultation_unlimited.type = "checkbox"
+tariff.auto_prolongate.type = "checkbox"
+tariff.message_enabled.type = "checkbox"
+tariff.message_unlimited.type = "checkbox"
+tariff.minute_count.type = "text"
+tariff.minute_count.options.validators.Digits.validator = "Digits"
+tariff.message_count.type = "text"
+tariff.message_count.options.validators.Digits.validator = "Digits"
+tariff.price.type = "text"
+tariff.price.options.validators.Regex.validator = "Regex"
+tariff.price.options.validators.Regex.options.pattern = "/^[0-9]+\.?[0-9]*$/i"
+tariff.specchoice.type = "checkbox"
+tariff.description.type = "textarea"
+tariff.description.options.allowEmpty = true
+tariff.message_response.type = "text"
+tariff.message_response.options.validators.Digits.validator = "Digits"
+tariff.consultation_response.type = "text"
+tariff.consultation_response.options.validators.Digits.validator = "Digits"
+tariff.tmin.type = "text"
+tariff.tmin.options.validators.Digits.validator = "Digits"
+tariff.message_price.type = "text"
+tariff.message_price.options.validators.Regex.validator = "Regex"
+tariff.message_price.options.validators.Regex.options.pattern = "/^[0-9]+\.?[0-9]*$/i"
+tariff.minute_price.type = "text"
+tariff.minute_price.options.validators.Regex.validator = "Regex"
+tariff.minute_price.options.validators.Regex.options.pattern = "/^[0-9]+\.?[0-9]*$/i"
+tariff.queue_priority.type = "text"
+tariff.queue_priority.options.validators.Digits.validator = "Digits"
+tariff.tquant.type = "text"
+tariff.tquant.options.validators.Digits.validator = "Digits"
+tariff.period.type = "text"
+tariff.tqmin.type = "text"
+tariff.tqmin.options.validators.Digits.validator = "Digits"
+tariff.need_committer.type = "checkbox"
+tariff.active.type = "checkbox"
+tariff.active.options.default = "false"
+tariff.not_available.type = "checkbox"
+tariff.not_available.options.default = "false"
+
+;TESTING
+;tariff2.name.type = "text"
+;tariff2.name.options.validators.Alnum.validator = "Alnum"
+;tariff2.name.options.validators.Alnum.options.allowWhiteSpace = true
+;tariff2.name.options.default = "Hello World" ; из Zend_Filter_Input::Default !!!
+;tariff2.name.options.allowEmpty = true
