--- a/app/configs/validate.ini
+++ b/app/configs/validate.ini
@@ -31,10 +31,15 @@ tariff.name.type = "text"
 tariff.name.options.validators.Regex.validator = "Regex"
 tariff.name.options.validators.Regex.options.pattern = "/^[\wа-я\-\s]{1,50}$/iu"
 tariff.consultation_enabled.type = "checkbox"
+tariff.consultation_enabled.options.default = 0
 tariff.consultation_unlimited.type = "checkbox"
+tariff.consultation_unlimited.options.default = 0
 tariff.auto_prolongate.type = "checkbox"
+tariff.auto_prolongate.options.default = 0
 tariff.message_enabled.type = "checkbox"
+tariff.message_enabled.options.default = 0
 tariff.message_unlimited.type = "checkbox"
+tariff.message_unlimited.options.default = 0
 tariff.minute_count.type = "text"
 tariff.minute_count.options.validators.Digits.validator = "Digits"
 tariff.message_count.type = "text"
@@ -43,6 +48,7 @@ tariff.price.type = "text"
 tariff.price.options.validators.Regex.validator = "Regex"
 tariff.price.options.validators.Regex.options.pattern = "/^[0-9]+\.?[0-9]*$/i"
 tariff.specchoice.type = "checkbox"
+tariff.specchoice.options.default = 0
 tariff.description.type = "textarea"
 tariff.description.options.allowEmpty = true
 tariff.message_response.type = "text"
@@ -65,10 +71,11 @@ tariff.period.type = "text"
 tariff.tqmin.type = "text"
 tariff.tqmin.options.validators.Digits.validator = "Digits"
 tariff.need_committer.type = "checkbox"
+tariff.need_committer.options.default = 0
 tariff.active.type = "checkbox"
-tariff.active.options.default = "false"
+tariff.active.options.default = 0
 tariff.not_available.type = "checkbox"
-tariff.not_available.options.default = "false"
+tariff.not_available.options.default = 0
 
 ;TESTING
 ;tariff2.name.type = "text"
