--- a/app/configs/application.ini
+++ b/app/configs/application.ini
@@ -32,7 +32,7 @@ resources.mail.transport.password = AGzDINQz
 
 ; Mail Template
 email.templatePath = APPLICATION_PATH "/layouts/mail/templates/"
-email.layoutPath = APPLICATION_PATH "/layouts/mail/"
+email.layoutPath = APPLICATION_PATH "/layouts/core/"
 ;email.charset = "utf-8"
 
 ; Config Db
