--- a/app/configs/application.ini
+++ b/app/configs/application.ini
@@ -18,12 +18,14 @@ resources.frontController.baseUrl = http://192.168.1.51
 ; Session
 resources.session.remember_me_seconds = 86400
 
+
 ; Mail Transport
-resources.mail.transport.type = smtp
-resources.mail.transport.host = srv-exch-001
-resources.mail.transport.port = 25
-resources.mail.transport.username = galtsinak@lad.local
-resources.mail.transport.password = AGzDINQz
+;resources.mail.transport.type = smtp
+;resources.mail.transport.host = srv-exch-001
+;resources.mail.transport.port = 25
+;resources.mail.transport.username = galtsinak@lad.local
+;resources.mail.transport.password = AGzDINQz
+;resources.mail.transport.defaultFrom = galtsin@yandex.ru
 
 ;resources.mail.defaultFrom.email    = mail@helpme.ru
 ;resources.mail.defaultFrom.name     = "HELPME"
