--- a/app/configs/validate.ini
+++ b/app/configs/validate.ini
@@ -3,7 +3,7 @@
 ;Аккаунт
 account.login.type = "text"
 account.login.options.validators.Regex.validator = "Regex"
-account.login.options.validators.Regex.options.pattern = "/^[0-9a-z_-]{1,50}$/iu"
+account.login.options.validators.Regex.options.pattern = "/^[a-z]{1}[0-9a-z_-]{1,50}$/iu"
 account.login.options.filters.StringTrim.filter = "StringTrim"
 account.password.type = "password"
 account.password.options.validators.Regex.validator = "Regex"
